<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="new_product">New</string>
    <string name="card_number">* * * * * * * * * * * * 3947</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_new_card">Add new Card</string>
    <string name="add_card">Add Card</string>
    <string name="empty_favourite">Empty Favourite</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="card_number_star">**** **** **** </string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_error">email must contain @</string>
    <string name="password">Password</string>
    <string name="password_error">Password must equal 8 chars</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_name">Search Product By Name</string>
    <string name="home_navigation_title">Home</string>
    <string name="product_navigation_title">Products</string>
    <string name="coupon_navigation_title">Coupouns</string>
    <string name="inventory_navigation_title">Inventory</string>
    <string name="save_product">Save Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="count">Count</string>
    <string name="employers_navigation_title">Employers</string>
    <string name="profile_navigation_title">Profile</string>

    <string name="invalid_email">Not a valid email address. Should be your@email.com</string>
    <string name="required">This field is required</string>
    <string name="password_length_error">Password length must be more than 8 char</string>
    <string name="confirm_password_error">Password must be identical</string>
    <!--Alert Dialog-->
    <string name="ok">OK</string>
    <string name="email_or_password_error">email or password error</string>
    <string name="error">error</string>
    <string-array name="product_types">
        <item>T-SHIRTS</item>
        <item>ACCESSORIES</item>
        <item>SHOES</item>
    </string-array>

    <string-array name="product_categories">
        <item>HOME PAGE</item>
        <item>KID</item>
        <item>MEN</item>
        <item>SALE</item>
        <item>WOMEN</item>
    </string-array>

    <string-array name="jop_titles">
        <item>SuperUser</item>
        <item>Admin</item>
        <item>SuperVisor</item>
    </string-array>




</resources>